@@ -76,6 +76,8 @@ IMPROVEMENTS:
 
   ZOOKEEPER-789. Improve FLE log messages (flavio via phunt)
 
+  ZOOKEEPER-798. Fixup loggraph for FLE changes (Ivan Kelly via phunt)
+
 NEW FEATURES:
   ZOOKEEPER-729. Java client API to recursively delete a subtree.
   (Kay Kay via henry)
